ksv: Update tab contents in the second init.

ksv inits the side tabs twice to reduce latency: first only inits the
default category to show users, and then inits all categories in the
background. However, in the second init, the view heirarchy changes,
which causes OnBlur on the Tab. This patch only updates the tab
contents in the second init in order to keep the focus.

Bug: 920409
Test: manual.
Change-Id: Id8bdba5cd5ca38d6a8f8490029cfda756733c8ec
Reviewed-on: https://chromium-review.googlesource.com/c/1406239
Commit-Queue: Tao Wu <wutao@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#622965}
Former-commit-id: 6fde4b2013b8fd941df9aa337e77d39f7518d93c